k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-k8s-ingress-demo-service
spec:
  selector:
    app: flask-k8s-ingress-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
